--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,17 @@
 </head>
 <body>
 
+<% if user_signed_in? %>
+Logged in as <strong>
+<%= current_user.email %></strong>
+<%= link_to "Edit Profile", edit_user_registration_path %>
+<%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+
+<% else %>
+<%= link_to "Sign Up", new_user_registration_path %>
+<%= link_to "Log In", new_user_session_path %>
+<% end %>
+
 <%= yield %>
 
 </body>
