--- a/app/views/ad_posts/index.html.erb
+++ b/app/views/ad_posts/index.html.erb
@@ -1,2 +1,7 @@
-<h1>AdPosts#index</h1>
-<p>Find me in app/views/ad_posts/index.html.erb</p>
+<h1><center>This is a List of Ad-Post</center></h1>
+<% @posts.each do |post| %>
+<%= post.title %><br>
+<%= post.description %><br>
+<%= image_tag post.photo_url.to_s %>
+<% end %>
+
