--- a/app/views/ad_posts/index.html.erb
+++ b/app/views/ad_posts/index.html.erb
@@ -1,7 +1,30 @@
-<h1><center>This is a List of Ad-Post</center></h1>
-<% @posts.each do |post| %>
-<%= post.title %><br>
-<%= post.description %><br>
-<%= image_tag post.photo_url(:thumb).to_s %>
-<% end %>
+<%- model_class = Post -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:title) %></th>
+      <th><%= model_class.human_attribute_name(:description) %></th>
+      <th><%= model_class.human_attribute_name(:category_id) %></th>
+      <th><%= model_class.human_attribute_name(:photo) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      </tr>
+  </thead>
+  <tbody>
+    <% @posts.each do |post| %>
+      <tr>
+        <td><%= post.id %></td>
+        <td><%= post.title %></td>
+        <td><%= post.description %></td>
+        <td><%= post.category.name %></td>
+        <td><%= image_tag post.photo_url(:thumb).to_s %></td>
+        <td><%=l post.created_at %></td>
+
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
