--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,6 +60,8 @@
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
+        <div class="col-lg-3">
+
      <footer>
         <p><center>&copy; pruzoth 2014</center></p>
       </footer>
