--- a/app/views/ad_posts/index.html.erb
+++ b/app/views/ad_posts/index.html.erb
@@ -1,4 +1,5 @@
 <%- model_class = Post -%>
+<div class=col-lg-9>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 </div>
@@ -27,4 +28,9 @@
     <% end %>
   </tbody>
 </table>
-
+</div>
+<div class = "col-lg-3">
+<h2>Categories</h2>
+<% @categories.each do |category| %>
+<%= link_to category.name, "/categories"  %><br>
+<% end %>
