Added Authenticate before action

--- a/app/views/ad_posts/index.html.erb
+++ b/app/views/ad_posts/index.html.erb
@@ -30,7 +30,14 @@
 </table>
 </div>
 <div class = "col-lg-3">
-<h2>Categories</h2>
+<table>
+<thead>
+<tr><th><h2>Categories</h2></th></tr></thead>
+<tbody>
 <% @categories.each do |category| %>
-<%= link_to category.name, "/categories/#{category.id}"  %><br>
+<tr>
+<td><%= link_to category.name, "/categories/#{category.id}"  %></td><br>
+</tr>
 <% end %>
+</tbody>
+</table>
