--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,8 @@
+<div class="container">
+<div class="jumbotron">
+<div class="text-info">
 <h1><center>This is Just a Ad-Post Application</center></h1>
-
+<p><center><%= link_to "Fork Me", "/" %></center></p>
+</div>
+</div>
+</div>
